<resources>
    <string name="app_name">GST Sales Report</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="new_sale">New Sale</string>
    <string name="invoice">Invoice# :</string>
    <string name="date">Date :</string>
    <string name="date_tab">Date</string>
    <string name="party_name">Party Name :</string>
    <string name="invoice_amount">Invoice Amount :</string>
    <string name="required">Required</string>
    <string name="image_capture_error">Error! Unable to save image</string>
    <string name="image_dowload_error">Error! Unable to download image</string>
    <string name="save">Save</string>
    <string name="include_images">Include Images</string>
    <string name="total_invoice_amount">Total Invoice Amount</string>
    <string name="total_gst">Total GST</string>
    <string name="igst">IGST</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="i_date">Date</string>
    <string name="taxable_amount">Taxable Amount</string>
    <string name="i_party_name">Party Name</string>
    <string name="i_gst_number">GST Number</string>
    <string name="i_invoice_number">Invoice Number</string>
    <string name="name">Name</string>
    <string name="firm_name">Firm Name</string>
    <string name="input_gst_number">GST Number</string>
    <string name="select_state">State</string>
    <string name="profile">Profile</string>
    <string name="month">Month</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="select_date">Select Date</string>
    <string name="ok">OK</string>
    <string name="export">Export</string>
    <string name="export_xlx">Export Excel Sheet</string>
    <string name="export_all_data">Delete Exported Records</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="tax_18">18</string>
    <string name="gst_percentage">GST %</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>
