<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:minWidth="250dp"
    android:orientation="vertical"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/rect_border"
        android:minWidth="240dp"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <RadioButton
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:button="@null"
            android:checked="true"
            android:text="@string/date_tab"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:button="@null"
            android:checked="false"
            android:text="@string/month"
            android:textAlignment="center" />
    </RadioGroup>

    <com.testtube.gstreporter.views.DateFilterWidget
        android:id="@+id/date_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/tabs"
        app:layout_constraintStart_toStartOf="@id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:titleTextColorValue="@color/grey_dark"
        app:titleTextValue="Start Date" />

    <CheckBox
        android:id="@+id/date_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="5dp"
        android:text="Date Range"
        app:layout_constraintEnd_toEndOf="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/date_end"
        app:layout_goneMarginTop="8dp" />

    <com.testtube.gstreporter.views.DateFilterWidget
        android:id="@+id/date_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/date_start"
        app:layout_constraintStart_toStartOf="@+id/date_start"
        app:layout_constraintTop_toBottomOf="@+id/date_start"
        app:titleTextColorValue="@color/grey_dark"
        app:titleTextValue="End Date" />

    <Button
        android:id="@+id/apply"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/date_range" />

    <Button
        android:id="@+id/clear"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/apply"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/date_end"
        app:layout_constraintTop_toTopOf="@+id/apply" />

</androidx.constraintlayout.widget.ConstraintLayout>